--- a/index.htm
+++ b/index.htm
@@ -155,5 +155,12 @@
 
 	<script src="ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 	<script src="intro/home.js"></script>
+	<script type="text/javascript">
+	<!--d0 = new Date('April 13, 2021'); // пуск сайта
+	d1 = new Date();
+	dt = (d1.getTime() - d0.getTime()) / (1000*60*60*24);
+	document.write('Works <B>' + Math.round(dt) + '</B> days');
+	-->
+	</script>
 </body>
 </html>
