--- a/index.htm
+++ b/index.htm
@@ -61,6 +61,7 @@
 				Here are my little mods:
 				<div class="tidbit-container projects-tidbits">
 					<div class="tidbit"><a href="https://www.curseforge.com/minecraft/mc-mods/lava-generator"><i class="material-icons">settings</i> Lava Generator</a></div>
+					<div class="tidbit"><a href="l_g/index.html"><i class="material-icons">settings</i> Lava Generator</a></div>
 					<div class="tidbit"><a href="https://www.curseforge.com/minecraft/mc-mods/staff-craft"><i class="material-icons">segment</i> Staff Craft</a></div>
 				</div>
 				You can see all the mods I made on <a href="https://www.curseforge.com/members/coringplay/projects">CurseForge</a>!
