--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="description" content="Веб-документация на MDN предоставляет собой информацию об открытых веб-технологиях,включая HTML, CSS и различные API для веб-сайтов и прогрессивных веб-приложений. Также на сайте содержатся материалы для разработчиков о таких продуктах Mozilla, как Инструменты разработчика Firefox.">
+
 	<title>Coring - Mods</title>
 
 	<link rel="stylesheet" href="intro/intro.css">
