--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="description" content="Веб-документация на MDN предоставляет собой информацию об открытых веб-технологиях,включая HTML, CSS и различные API для веб-сайтов и прогрессивных веб-приложений. Также на сайте содержатся материалы для разработчиков о таких продуктах Mozilla, как Инструменты разработчика Firefox.">
+	<meta name="description" content="Site by Coring | Vlad Shalya">
 
 	<title>Coring - Mods</title>
 
