--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="description" content="Site by Coring | Vlad Shalya">
-
-	<title>Coring - Mods</title>
+	<title>Coring-Mods</title>
 
 	<link rel="stylesheet" href="intro/intro.css">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="shortcut icon" href="img/favicon.ico">
 
@@ -16,20 +16,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 </head>
 <body bgcolor="#862C00">
-		<!-- Yandex.Metrika counter -->
-	<script type="text/javascript" >
-	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-	   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-	   ym(82293145, "init", {
-		clickmap:true,
-		trackLinks:true,
-		accurateTrackBounce:true
-	   });
-	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/82293145" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
 	<div id="header">
 		<div id="header-name">Coring</div>
 		&lt;Mod creator&gt;
@@ -54,10 +40,10 @@
 			<div class="category-contents category-about">
 				<div class="tidbit-container about-tidbits">
 					<div class="tidbit"><i class="material-icons">speaker_notes</i> he/they</div>
-					<div class="tidbit"><i class="material-icons">male</i> Demimale</div>
-					<div class="tidbit"><i class="material-icons">people_alt</i> Hetero</div>
+					<div class="tidbit"><i class="material-icons">male</i> Male</div>
+					<div class="tidbit"><i class="material-icons">people_alt</i> Standart</div>
 					<div class="tidbit"><i class="material-icons">location_on</i> Russia</div>
-					<div class="tidbit"><i class="material-icons">cake</i> 18</div>
+					<div class="tidbit"><i class="material-icons">cake</i> 19</div>
 					<div class="tidbit"><i class="material-icons">translate</i> RU + EN</div>
 				</div>
 				
@@ -151,7 +137,7 @@
 					<div class="favorite-img"><img src="intro/img/homura.gif"></div>
 					<div class="favorite-info">
 						<div class="favorite-title">Magika</div>
-						<div class="favorite-name"> </div>
+						<div class="favorite-name">Homura</div>
 					</div>
 				</div>
 
@@ -169,7 +155,31 @@
 				</div>
 			</div>
 	</div>
-
+	<footer>
+		<div class="container">
+			<div class="sec aboutus">
+				<h2>About Us</h2>
+				<p>I am a creator of small mods for minecraft. I am a citizen of a mysterious country. Which is no. This is my website. To which I will add the same mods as on curseforge.</p>
+				<ul class="sci">
+					<li><a href="https://twitter.com/CoriVlad"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></i>
+					<li><a href="https://vk.com/shalya2002"><i class="fa fa-vk" aria-hidden="true"></i></a></i>
+					<li><a href="https://github.com/CoringPlay"><i class="fa fa-github" aria-hidden="true"></i></a></i>
+				</ul>
+			</div>
+			<div class="sec quickLinks">
+				<h2>Quick Links</h2>
+				<ul>
+					<li><a href="#">About</a></li>
+					<li><a href="#">FAQ</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Help</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 	<script src="ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 	<script src="intro/home.js"></script>
 </body>
