--- a/l_g/index.html
+++ b/l_g/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test</title>
+	<link rel="shortcut icon" href="favicon.ico">
+	<title>Lava Generator</title>
 </head>
 <body>
+
+		<input type='button' value='Нажмите на меня' onclick='showMessage()' />
+
+	<script type='text/javascript'>function showMessage(){alert('Hi (❁´◡`❁).')}</script>
 
 </body>
 </html>
