--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+ 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7783520326807760"
+     crossorigin="anonymous"></script>
+	
 	<title>Coring-Mods</title>
 
 	<link rel="stylesheet" href="intro/intro.css">
