--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
 		<div id="header-name">Coring</div>
 		&lt;Mod creator&gt;
 		<div id="header-img"><img src="intro/img/icon.png"></div>
-		<div id="header-img-attribution"><i class="material-icons">brush</i>Vlad</a></div>
+		<div id="header-img-attribution"><i class="material-icons">brush</i>Vlad</div>
 
 		<div id="header-scroll-down"><i class="material-icons">expand_more</i></div>
 	</div>
