--- a/index.htm
+++ b/index.htm
@@ -159,9 +159,9 @@
 				<p>I am a creator of small mods for minecraft. I am a citizen of a mysterious country. Which is no. This is my website. To which I will add the same mods as on curseforge.</p>
 				<ul class="sci">
 					<li><a href="https://twitter.com/CoriVlad"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></i>
-					<li><a href="https://vk.com/shalya2002"><i class="fa fa-vk" aria-hidden="true"></i></a></i>
-					<li><a href="https://github.com/CoringPlay"><i class="fa fa-github" aria-hidden="true"></i></a></i>
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="https://vk.com/shalya2002"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+					<li><a href="https://github.com/CoringPlay"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 				</ul>
 			</div>
 			<div class="sec quickLinks">
