--- a/index.htm
+++ b/index.htm
@@ -160,7 +160,7 @@
 				<ul class="sci">
 					<li><a href="https://twitter.com/CoriVlad"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="https://vk.com/shalya2002"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
 					<li><a href="https://github.com/CoringPlay"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 				</ul>
 			</div>
