--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,11 @@
 	<link rel="stylesheet" href="icon.css?family=Material+Icons">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+	<meta property="og:title" content="">
+	<meta property="og:site_name" content="coringplay.github.io">
+	<meta property="og:image" content="https://coringplay.github.io/intro/img/icon.png">
+	<meta property="og:image:width" content="968">
+	<meta property="og:image:height" content="504">
 </head>
 <body bgcolor="#862C00">
 	<div id="header">
