--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
      crossorigin="anonymous"></script>
 	
 	<title>Coring - Mods</title>
+	
+	<meta name="google-site-verification" content="y4zJR5fO1Uh80JE4ANy5yQOxEtFNKfHtCIhvUPu4XYs" />
 
 	<link rel="stylesheet" href="intro/intro.css">
 
